--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,1 +1,18 @@
-spring.application.name=server
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+  datasource:
+    url: jdbc:postgresql://${DATABASE_HOST}/${DATABASE_NAME}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  application:
+    name: security
+  jpa:
+    hibernate:
+      ddl-auto: update
