UserServiceでトークンを生成してレスポンスに含めるようにした

--- a/server/src/test/resources/application.yml
+++ b/server/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 app:
   jwt:
-    secret: "hoge"
+    secret: "this-is-secret-for-jwt-encode-decode-test"
     expiration-time: 3600
     issuer: "https://hoge.com"
 spring:
