--- a/server/src/test/resources/application.yml
+++ b/server/src/test/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   security:
     oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: "https://www.googleapis.com/oauth2/v3/certs"
+          issuer-uri: "https://accounts.google.com"
       client:
         registration:
           google:
